added missing "[" for error messages

--- a/framework/css/xslt-conref.css
+++ b/framework/css/xslt-conref.css
@@ -97,6 +97,11 @@
   		!important; 
 }
 
+*[xslt-conref] > oxy|error:before,
+*[xslt-conref][xslt-conref-source] > oxy|error:before{
+	-oxy-append-content: "[" !important;
+}
+
 *[xslt-conref] no-content {
 	/* Mark content to be invisible in output */
 	font-size: 	0.8em;
