Support for XSLT-Conref on table entries and -cells

--- a/framework/css/xslt-conref.css
+++ b/framework/css/xslt-conref.css
@@ -105,3 +105,12 @@
     display:	inline;
     margin:		0px;
 }
+
+*[class~="topic/table"][xslt-conref]:not([conaction])
+*[class~="topic/simpletable"][xslt-conref]:not([conaction]){
+    display : block;
+}
+
+*[class~="topic/row"][xslt-conref] {
+  	content: "" !important;
+}
