class: dita-semia/block

--- a/framework/css/xslt-conref.less
+++ b/framework/css/xslt-conref.less
@@ -128,3 +128,8 @@
 	font-size: 	0.8em;
 	color:		#999999;
 }
+
+/* support the block result element */
+*[class~="dita-semia/block"] {
+    display: block;
+}
