--- a/org.dita-semia.resolver/oxygen-framework/css/conbat/set-background.less
+++ b/org.dita-semia.resolver/oxygen-framework/css/conbat/set-background.less
@@ -8,6 +8,7 @@
 *[cba|suffix]:after(@{conbat-inline-index}),
 *[cba|code-suffix]:after(@{conbat-inline-index}),
 *[cba|suffix]:after(@{conbat-paragraph-index}),
-*[cba|title]:before(@{conbat-title-index})	{
+*[cba|title]:before(@{conbat-title-index}),
+*[cba|dt]:before(@{conbat-dt-index}){
     background-color	: @conbat-background;
 }
