--- a/org.dita-semia.resolver/oxygen-framework/css/dita-semia.less
+++ b/org.dita-semia.resolver/oxygen-framework/css/dita-semia.less
@@ -6,6 +6,8 @@
 /* configuration */
 @import "config.less";
 
+@import "dl-outputclasses.less";
+
 @import "conbat.less";
 
 @import "xslt-conref.less";
