--- a/oxygen-framework/css/conbat/paragraph-content.less
+++ b/oxygen-framework/css/conbat/paragraph-content.less
@@ -2,19 +2,19 @@
 	
 /* The prefix and suffix is generated as single paragraph. */
 
-*[class~="topic/ul"][cba|prefix]:before(@{conbat-paragraph-index}),
-*[class~="topic/ol"][cba|prefix]:before(@{conbat-paragraph-index})
+*[class~="topic/ul"][*|prefix]:before(@{conbat-paragraph-index}),
+*[class~="topic/ol"][*|prefix]:before(@{conbat-paragraph-index})
 {
 	display			: block;
-	content			: oxy_label(text, attr("cba|prefix"));
+	content			: oxy_label(text, attr("*|prefix"));
 	margin-top		: @conbat-paragraph-margin-top;
 	margin-bottom	: @conbat-paragraph-margin-bottom;
 }
 
-*[class~="topic/ul"][cba|suffix]:after(@{conbat-paragraph-index}),
-*[class~="topic/ol"][cba|suffix]:after(@{conbat-paragraph-index}) {
+*[class~="topic/ul"][*|suffix]:after(@{conbat-paragraph-index}),
+*[class~="topic/ol"][*|suffix]:after(@{conbat-paragraph-index}) {
 	display			: block;
-	content			: oxy_label(text, attr("cba|suffix"));
+	content			: oxy_label(text, attr("*|suffix"));
 	margin-top		: @conbat-paragraph-margin-top;
 	margin-bottom	: @conbat-paragraph-margin-bottom;
 }
@@ -23,12 +23,12 @@
 /* for simple list item don't set margins */
 
 
-*[class~="topic/sl"][cba|prefix]:before(@{conbat-paragraph-index}) {
+*[class~="topic/sl"][*|prefix]:before(@{conbat-paragraph-index}) {
 	display			: block;
-	content			: oxy_label(text, attr("cba|prefix"));
+	content			: oxy_label(text, attr("*|prefix"));
 }
 
-*[class~="topic/sl"][cba|suffix]:after(@{conbat-paragraph-index}) {
+*[class~="topic/sl"][*|suffix]:after(@{conbat-paragraph-index}) {
 	display			: block;
-	content			: oxy_label(text, attr("cba|suffix"));
+	content			: oxy_label(text, attr("*|suffix"));
 }
