--- a/oxygen-framework/css/conbat/set-background.less
+++ b/oxygen-framework/css/conbat/set-background.less
@@ -1,14 +1,14 @@
 
-*[cba|prefix]:before(@{conbat-inline-index}),
-*[cba|code-prefix]:before(@{conbat-inline-index}),
-*[cba|prefix]:before(@{conbat-paragraph-index}),
-*[cba|content],
-*[cba|default-content]:empty:after(@{conbat-default-content-index}),
-*[cba|default-content]:empty:after(@{conbat-default-content-marker-index}),
-*[cba|suffix]:after(@{conbat-inline-index}),
-*[cba|code-suffix]:after(@{conbat-inline-index}),
-*[cba|suffix]:after(@{conbat-paragraph-index}),
-*[cba|title]:before(@{conbat-title-index}),
-*[cba|dt]:before(@{conbat-dt-index}){
+*[*|prefix]:before(@{conbat-inline-index}),
+*[*|code-prefix]:before(@{conbat-inline-index}),
+*[*|prefix]:before(@{conbat-paragraph-index}),
+*[*|content],
+*[*|default-content]:empty:after(@{conbat-default-content-index}),
+*[*|default-content]:empty:after(@{conbat-default-content-marker-index}),
+*[*|suffix]:after(@{conbat-inline-index}),
+*[*|code-suffix]:after(@{conbat-inline-index}),
+*[*|suffix]:after(@{conbat-paragraph-index}),
+*[*|title]:before(@{conbat-title-index}),
+*[*|dt]:before(@{conbat-dt-index}){
     background-color	: @conbat-background;
 }
