--- a/oxygen-framework/css/conbat/inline-content.less
+++ b/oxygen-framework/css/conbat/inline-content.less
@@ -2,60 +2,60 @@
 /* The content is displayed right in front of or behind the actual content. */
 
 /* prefix */
-*[class~="topic/p"][cba|prefix]:before(@{conbat-inline-index}),
-*[class~="topic/ph"][cba|prefix]:before(@{conbat-inline-index}),
-*[class~="topic/sli"][cba|prefix]:before(@{conbat-inline-index}),
-*[class~="topic/stentry"][cba|prefix]:before(@{conbat-inline-index}),
-*[class~="topic/title"][cba|prefix]:before(@{conbat-inline-index}) {
-	content	: attr("cba|prefix");
+*[class~="topic/p"][*|prefix]:before(@{conbat-inline-index}),
+*[class~="topic/ph"][*|prefix]:before(@{conbat-inline-index}),
+*[class~="topic/sli"][*|prefix]:before(@{conbat-inline-index}),
+*[class~="topic/stentry"][*|prefix]:before(@{conbat-inline-index}),
+*[class~="topic/title"][*|prefix]:before(@{conbat-inline-index}) {
+	content	: attr("*|prefix");
 }
 
-*[class~="pr-d/codeph"][cba|prefix]:before(@{conbat-inline-index}) {
+*[class~="pr-d/codeph"][*|prefix]:before(@{conbat-inline-index}) {
 	/* undo the font changes for codeph */
 	font-family	: @body-font-family;
 	font-size	: @code-invert-font-size;
 	/* content is already generated for base class topic/ph */
 }
 
-*[class~="pr-d/codeph"][cba|code-prefix]:before(@{conbat-inline-index}) {
-	content	: attr("cba|code-prefix");
+*[class~="pr-d/codeph"][*|code-prefix]:before(@{conbat-inline-index}) {
+	content	: attr("*|code-prefix");
 }
 
 /* suffix */
-*[class~="topic/p"][cba|suffix]:after(@{conbat-inline-index}),
-*[class~="topic/ph"][cba|suffix]:after(@{conbat-inline-index}),
-*[class~="topic/sli"][cba|suffix]:after(@{conbat-inline-index}),
-*[class~="topic/stentry"][cba|suffix]:after(@{conbat-inline-index}),
-*[class~="topic/title"][cba|suffix]:after(@{conbat-inline-index}) {
-	content	: attr("cba|suffix");
+*[class~="topic/p"][*|suffix]:after(@{conbat-inline-index}),
+*[class~="topic/ph"][*|suffix]:after(@{conbat-inline-index}),
+*[class~="topic/sli"][*|suffix]:after(@{conbat-inline-index}),
+*[class~="topic/stentry"][*|suffix]:after(@{conbat-inline-index}),
+*[class~="topic/title"][*|suffix]:after(@{conbat-inline-index}) {
+	content	: attr("*|suffix");
 }
 
-*[class~="pr-d/codeph"][cba|suffix]:after(@{conbat-inline-index}) {
+*[class~="pr-d/codeph"][*|suffix]:after(@{conbat-inline-index}) {
 	/* undo the font changes for codeph */
 	font-family	: @body-font-family;
 	font-size	: @code-invert-font-size;
 	/* content is already generated for base class topic/ph */
 }
 
-*[class~="pr-d/codeph"][cba|code-suffix]:after(@{conbat-inline-index}) {
-	content	: attr("cba|code-suffix");
+*[class~="pr-d/codeph"][*|code-suffix]:after(@{conbat-inline-index}) {
+	content	: attr("*|code-suffix");
 }
 
 /* content */
-*[class~="topic/p"][cba|content],
-*[class~="topic/ph"][cba|content],
-*[class~="topic/sli"][cba|content],
-*[class~="topic/stentry"][cba|content],
-*[class~="topic/title"][cba|content] {
+*[class~="topic/p"][*|content],
+*[class~="topic/ph"][*|content],
+*[class~="topic/sli"][*|content],
+*[class~="topic/stentry"][*|content],
+*[class~="topic/title"][*|content] {
 	content	: oxy_link-text();
 }
 
 /* default-content */
-*[class~="topic/p"][cba|default-content]:empty:after(@{conbat-default-content-index}),
-*[class~="topic/ph"][cba|default-content]:empty:after(@{conbat-default-content-index}),
-*[class~="topic/sli"][cba|default-content]:empty:after(@{conbat-default-content-index}),
-*[class~="topic/stentry"][cba|default-content]:empty:after(@{conbat-default-content-index}),
-*[class~="topic/title"][cba|default-content]:empty:after(@{conbat-default-content-index}) {
+*[class~="topic/p"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/ph"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/sli"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/stentry"][*|default-content]:empty:after(@{conbat-default-content-index}),
+*[class~="topic/title"][*|default-content]:empty:after(@{conbat-default-content-index}) {
 	/* have the cursor in front of the content to suggest the author that he can overwrite it */
 	content	: oxy_link-text();
 }
